# storage/api-docs/api-docs.json
@@ -122,6 +122,49 @@
                 }
             }
         },
+        "/api/get-course-quiz": {
+            "post": {
+                "tags": [
+                    "Quiz"
+                ],
+                "description": "Get a Quiz for a particular user for a particular course",
+                "operationId": "App\\Http\\Controllers\\CourseQuizController::getQuiz",
+                "parameters": [
+                    {
+                        "name": "token",
+                        "in": "query",
+                        "description": "token",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "course_id",
+                        "in": "query",
+                        "description": "Course id for a particular course",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "level",
+                        "in": "query",
+                        "description": "easy|medium|hard",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{[error_code=>0,msg=>'success']}"
+                    }
+                }
+            }
+        },
         "/api/get-projects": {
             "post": {
                 "tags": [
@@ -238,49 +281,6 @@
                 "responses": {
                     "200": {
                         "description": "{[error_code=>0,msg=>'success'],[error_code=>1,msg=>'Project Id is Invalid'],[error_code=>2,'msg'=>'project Id is Compulsory']}"
-                    }
-                }
-            }
-        },
-        "/api/get-quiz": {
-            "post": {
-                "tags": [
-                    "Quiz"
-                ],
-                "description": "Get a Quiz for a particular user for a particular course",
-                "operationId": "App\\Http\\Controllers\\QuestionController::getQuiz",
-                "parameters": [
-                    {
-                        "name": "token",
-                        "in": "query",
-                        "description": "token",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "course_id",
-                        "in": "query",
-                        "description": "Course id for a particular course",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    },
-                    {
-                        "name": "level",
-                        "in": "query",
-                        "description": "easy|medium|hard",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{[error_code=>0,msg=>'success']}"
                     }
                 }
             }
